# rhttp

rhttp/: README.md  pubspec.yaml
rhttp/android/: build.gradle.kts
rhttp/example/android/app/: build.gradle.kts
rhttp/rust/: Cargo.toml
rhttp/rust/src/api/: client.rs  init.rs
