[package]
name = "rhttp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
chrono = "0.4.44"
flutter_rust_bridge = { version = "=2.12.0", features = ["chrono"] }
futures-util = "0.3.32"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"

[dependencies.reqwest]
version = "0.13.2"
default-features = false
features = [
    "charset",
    "cookies",
    "http2",
    "http3",
    "rustls",
    "stream",
    "multipart",
    "socks",

    # Compression
    "brotli",
    "gzip",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
opt-level = 3
strip = true
panic = "abort"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 3
panic = "abort"
